fix(): add gradient to hero and left align content

--- a/src/components/EnsonoStacksImage/EnsonoStacksImage.module.css
+++ b/src/components/EnsonoStacksImage/EnsonoStacksImage.module.css
@@ -4,16 +4,17 @@
     align-items: center;
     justify-content: center;
     min-height: 20rem;
+    background-image: linear-gradient(to right,  rgba(51, 51, 51, 0.7), rgba(255, 255, 255, 0));
 }
 
 .ensonoStacksImageContainer h2,
 .ensonoStacksImageContainer p {
- color: #fff;
+    color: #fff;
 }
 
 .ensonoStacksImageContainer p {
-    width: 9.5rem;
-    text-align: center;
+    width: 15.5rem;
+    text-align: left;
 }
 
 .ensonoStacksImageContainer .wrapperImage {
@@ -40,8 +41,8 @@
 }
 
 .ensonoStacksImageContainer .stacksLogo img {
-   width: 8rem;
-   height: 4rem;
+    width: 8rem;
+    height: 4rem;
 }
 
 .ensonoStacksImageContainer .wrapper {
@@ -49,7 +50,7 @@
     bottom: 2rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
 }
 
 @media only screen and (min-width: 768px) {
@@ -66,7 +67,7 @@
     .ensonoStacksImageContainer .stacksLogo img {
         width: auto;
         height: auto;
-     }
+    }
 
     .ensonoStacksImageContainer p {
         width: 17rem;
